# Q4_Sol_rached

./: README.md
ammanchor/: Anchor.toml
ammanchor/programs/ammanchor/: Cargo.toml
ammanchor/programs/ammanchor/src/: lib.rs
ammanchor/tests/: ammanchor.ts
escrowanchor/: Anchor.toml
escrowanchor/programs/escrowanchor/: Cargo.toml
escrowanchor/programs/escrowanchor/src/: lib.rs
escrowanchor/tests/: escrowanchor.ts
exercices/: README.md
exercices/cluster1/: nft_metadata.ts
exercices/week1TS/cluster1/: nft_image.ts  spl_init.ts  spl_metadata.ts  spl_mint.ts  spl_transfer.ts
exercises/: README.md
exercises/week1TS/cluster1/: nft_mint.ts
metamemV0.3/: Anchor.toml  README.md
metamemV0.3/programs/metamemthree/: Cargo.toml
metamemV0.3/programs/metamemthree/src/: constants.rs  lib.rs
metamemV0.3/programs/metamemthree/src/instructions/: create.rs  deposit.rs  mod.rs  redeem.rs  swap.rs
metamemV0.3/programs/metamemthree/src/state/: config.rs
metamemV0.3/tests/: config.ts  metamemthree.ts
nftmpanchor/: Anchor.toml
nftmpanchor/programs/nftmpanchor/: Cargo.toml
nftmpanchor/programs/nftmpanchor/src/: errors.rs  lib.rs
nftmpanchor/tests/: nftmpanchor.ts
nftstkanchor/: Anchor.toml  package.json
nftstkanchor/programs/nftstkanchor/: Cargo.toml
nftstkanchor/programs/nftstkanchor/src/: lib.rs
nftstkanchor/tests/: nftstkanchor.ts
vaultanchor/: Anchor.toml
vaultanchor/programs/vaultanchor/: Cargo.toml
vaultanchor/programs/vaultanchor/src/: lib.rs
vaultanchor/tests/: vaultanchor.ts
(+13 files in other folders)
